# syftbox

./: .air.toml  .gitignore  .goreleaser.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  TASKS.md  acl.md  benchmark.sh  chaos.ps1  coverage.sh  go.mod  go.sum  justfile  licenses.sh  lint.sh  syftbox-deploy-detail.md  test-integration.ps1  test.sh
.github/workflows/: deploy.yml  devstack-integration.yml  (+5 more)
config/: dev.yaml  prod.yaml  server.dev.yaml  server.example.yaml
deploy/: coturn.service  setup-coturn.sh  turnserver.conf
docker/: Dockerfile.client  Dockerfile.client.ds  Dockerfile.client.rust  Dockerfile.ds-vm  Dockerfile.low-syftbox  Dockerfile.server  README.md  docker-compose-client.yml  docker-compose-nat-test.yml  docker-compose.yml  entrypoint-client.sh  entrypoint-nat-test.sh  nat-test.sh
docs/: access-logging.md  acl-system.md  conflicts.md  index.md  permission-user-guide.md  permissions.md  send-handler.md  sync.md  vanity-domains.md  websockets.md
licenses/: all-licenses.csv  all-licenses.json  go-licenses.csv  license-overrides.csv  rust-licenses.json
plans/: hotlink.md  quic-to-webrtc.md  subs.md
rust/: Cargo.toml  README.md
rust/src/: acl_staging.rs  apps.rs  auth.rs  client.rs  config.rs  control.rs  daemon.rs  events.rs  filters.rs  hotlink.rs  hotlink_manager.rs  http.rs  lib.rs  logging.rs  login.rs  main.rs  subscriptions.rs  sync.rs  telemetry.rs  uploader.rs  workspace.rs  wsproto.rs
rust/tests/: daemon_ux.rs  hotlink_baseline.rs  login_cli.rs
syftbox-deployment/: .env.example  .gitignore  FIXES-APPLIED.md  README-NEW-ARCHITECTURE.md  README.md  build-and-push.sh  build-images.sh  deploy.sh
(+653 files in other folders)
