[package]
name = "syftbox-rs"
version = "0.1.0"
edition = "2021"
description = "Rust client entrypoint for SyftBox (shim over Go client while porting)"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "time"] }
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "stream", "rustls-tls", "multipart"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
url = "2"
regex = "1"
once_cell = "1"
md5 = "0.7"
futures-util = "0.3"
base64 = "0.22"
notify = "6"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5", features = ["util", "make"] }
